# document-reader-AI

./: .gitignore  README.md  app.py  backend.py  pyproject.toml  vision_backend.py
